mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_hex_literal.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Invalid integer literal: 0xGHI
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_hex_literal.mux:2:10
   |
 2 | auto x = 0xGHI
   |          ^^^^^
